--- a/Test118/res/values/strings.xml
+++ b/Test118/res/values/strings.xml
@@ -22,6 +22,11 @@
         <item>Help</item>
         <item>Quit</item>
     </string-array>
+        <string-array name="algorithms">
+            <item>F5Factory</item>
+        <item>LSBFactory</item>
+        
+    </string-array>
     <string name="drawer_open">Open navigation drawer</string>
     <string name="drawer_close">Close navigation drawer</string>
     <string name="action_websearch">Web search</string>
